Fix alignment issues

--- a/Exercises/quizApp/css/main.css
+++ b/Exercises/quizApp/css/main.css
@@ -1,13 +1,18 @@
-body {
+body{
   background-color: #80808029;
   font-family: Verdana;
   font-size: 15px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
-body.header {
-  vertical-align: center;
-  float: left;
-  margin: auto;
+.answers{
+  font-family: Verdana;
+  font-size: 15px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 h1 {
@@ -16,10 +21,18 @@ h1 {
   text-align: center;
 }
 
+ul li{
+  list-style: none;
+  white-space:normal;
+}
+
 .answers-list {
   font-family: Verdana;
   font-size: 15px;
-  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+  display: table;
 }
 
 .js-logo {
@@ -47,17 +60,16 @@ h1 {
 
 .feedback {
   font-family: Verdana;
-  font-size: 12px;
-  padding: 10px;
+  font-size: 15px;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align:center;
+  display: table;
 }
 
 .hide {
   display: none;
-}
-
-.js-answers {
-  padding: 0px;
-  margin-left: 5px;
 }
 
 .input {
